--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </main>
 
     <footer>
-        <p>© 2024 Página no oficial de Camilo Echeverry. Todos los derechos reservados.</p>
+        <p>© 2024 Página  oficial de Camilo Echeverry. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
