--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camilo Echeverry - Página Oficial</title>
+    <title>camilo-echeverrycolombiano</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="logo">
+        <div class="https://www.bing.com/images/search?view=detailV2&ccid=iEEamIgy&id=3D5EF24DED02442584705B2058B4E6FA33EA83D4&thid=OIP.iEEamIgyN5bRF_PxEWfZkAHaEK&mediaurl=https%3A%2F%2Fi.ytimg.com%2Fvi%2FR_kVkkd8ngU%2Fmaxresdefault.jpg&cdnurl=https%3A%2F%2Fth.bing.com%2Fth%2Fid%2FR.88411a9888323796d117f3f11167d990%3Frik%3D1IPqM%252frmtFggWw%26pid%3DImgRaw%26r%3D0&exph=720&expw=1280&q=logo+de+camilo+echeverry&simid=607998255741498145&form=IRPRST&ck=13B33CC98F093896DFF0F43937E6A36B&selectedindex=0&itb=0&ajaxhist=0&ajaxserp=0&vt=0&sim=11">
             <h1>Camilo Echeverry</h1>
         </div>
         <nav>
